<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearLayoutStyle"
    android:orientation="vertical"
    tools:context="cloud.aakashsharan.musicalapp.PaymentActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:padding="16dp"
        android:text="@string/payment_api"/>

    <Button
        android:id="@+id/recently_played"
        style="@style/ButtonStyle"
        android:text="@string/recently_played"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_activity_text"
        android:background="@color/payment_background"
        android:textSize="20sp"
        android:layout_margin="4dp"
        android:padding="4dp"/>

</LinearLayout>
